# open-xam

./: .gitignore  CLAUDE.md  Makefile  README.md  angular.json  docker-compose.yaml  eslint.config.js  jest.config.ts  package.json  setup-jest.ts  tailwind.config.js  tsconfig.eslint.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-08-10-182405_init/: down.sql  up.sql
src-tauri/migrations/2025-12-14-074514_exam_status_type/: down.sql  up.sql
src-tauri/migrations/2026-01-08-113314_exam_duration/: down.sql  up.sql
src-tauri/migrations/2026-01-18-160000_exam_max_questions_real_exam/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs  tauri_plugin_log_initialize.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/crud/: answer_repository_trait.rs  assignment_option_repository_trait.rs  category_repository_trait.rs  crud_repository_trait.rs  enum_converter_trait.rs  exam_repository_trait.rs  execute_transactionally.rs  mod.rs  question_repository_trait.rs
src-tauri/src/application/usecase/: answer_use_case.rs  assignment_option_use_case.rs  category_use_case.rs  exam_use_case.rs  mod.rs  question_use_case.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: answer_entity.rs  (+5 more)
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/presentation/: answer_invoke_handler.rs  assignment_option_invoke_handler.rs  category_invoke_handlers.rs  exam_invoke_handler.rs  mod.rs  question_invoke_handler.rs  sqlite_connection.rs
(+353 files in other folders)
