[package]
name = "open-xam"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_xam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build]
rustflags = ["--cfg", "debug_enabled"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4.27"
dirs = "6.0.0"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2.0"
regex = "1.11.1"
field_names = { path = "../field_names" }
tauri-plugin-fs = "2.4.5"

[dev-dependencies]
serial_test = "3.2"

